--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,10 @@
 OK - new terminology: participant, tournament, round, strike, challenge, question-answer
-!! - show a log of failed challenges
+OK - show a log of failed challenges
 	OK - save in domain model
 	OK - layout
-	!! - give unique ID for participants
-	- use the ID in showing that participant's details
-- load challenges from a directory
+	OK - give unique ID for participants
+	OK - use the ID in showing that participant's details
+!! - load challenges from a directory
 	- find out how to do it - eval or something?
 	- reload automatically every minute?
 - poll servers automatically, many times per second
