--- a/TODO.txt
+++ b/TODO.txt
@@ -7,13 +7,19 @@ OK - show a log of failed challenges
 OK - load challenges from a directory
 	OK - find out how to do it - eval or something?
 	OK - reload before polling
-!! - poll servers automatically, many times per second, infinite loop
-	!! - one poller thread per server
+- handle failures form poller
+	- fix: polling crashes if malformed URL
+- poll servers automatically, many times per second, infinite loop
+	- one poller thread per server
 - calculate the score automatically, in 1 minute ticks
 	- start a timer
 	- reload challenges in the beginning of a round
+- better score calculation rules
+	- take challenge points into consideration
+	- use the points of the highest hit below the lowest miss
 - show score accumulation history
 	- save score for each tick as [timestamp score]
 	- calculate total score from the history
 	- print the history as text
 	- visualize the history as graph (find a JS graph library)
+- better graphics
