--- a/TODO.txt
+++ b/TODO.txt
@@ -8,8 +8,8 @@ OK - load challenges from a directory
 	OK - find out how to do it - eval or something?
 	OK - reload before polling
 OK - trim reponses from participants to ignore trailing newlines
-- handle failures form poller
-	- fix: polling crashes if malformed URL, or if service respondes with garbage
+OK - handle failures form poller
+	OK - fix: polling crashes if malformed URL, or if service respondes with garbage
 - poll servers automatically, many times per second, infinite loop
 	- one poller thread per server
 - calculate the score automatically, in 1 minute ticks
@@ -19,6 +19,7 @@ OK - trim reponses from participants to ignore trailing newlines
 - better score calculation rules
 	- take challenge points into consideration
 	- use the points of the highest hit below the lowest miss
+	- don't poll harder challenges when an easier challenge fails
 - show score accumulation history
 	- save score for each tick as [timestamp score]
 	- calculate total score from the history
