--- a/TODO.txt
+++ b/TODO.txt
@@ -10,11 +10,13 @@ OK - load challenges from a directory
 OK - trim reponses from participants to ignore trailing newlines
 OK - handle failures form poller
 	OK - fix: polling crashes if malformed URL, or if service respondes with garbage
-- poll servers automatically, many times per second, infinite loop
-	- one poller thread per server
+OK - poll servers automatically, many times per second, infinite loop
+	OK - one poller thread per server
+	OK - the polling in the poller thread
 - calculate the score automatically, in 1 minute ticks
 	- start a timer
 	- reload challenges in the beginning of a round
+- challenges: lorem ipsum: trim dot and comma
 - make parsing easier; separate operator and operands by newline?
 - better score calculation rules
 	- take challenge points into consideration
