--- a/TODO.txt
+++ b/TODO.txt
@@ -13,9 +13,9 @@ OK - handle failures form poller
 OK - poll servers automatically, many times per second, infinite loop
 	OK - one poller thread per server
 	OK - the polling in the poller thread
-- calculate the score automatically, in 1 minute ticks
-	- start a timer
-	- reload challenges in the beginning of a round
+OK - calculate the score automatically, in 1 minute ticks
+	OK - start a timer
+	OK - reload challenges in the beginning of a round
 - challenges: lorem ipsum: trim dot and comma
 - make parsing easier; separate operator and operands by newline?
 - better score calculation rules
