--- a/TODO.txt
+++ b/TODO.txt
@@ -16,6 +16,7 @@ OK - poll servers automatically, many times per second, infinite loop
 OK - calculate the score automatically, in 1 minute ticks
 	OK - start a timer
 	OK - reload challenges in the beginning of a round
+- start the application explicitly in main instead of on loading
 - challenges: lorem ipsum: trim dot and comma
 - make parsing easier; separate operator and operands by newline?
 - better score calculation rules
