--- a/TODO.txt
+++ b/TODO.txt
@@ -17,6 +17,8 @@ OK - calculate the score automatically, in 1 minute ticks
 	OK - start a timer
 	OK - reload challenges in the beginning of a round
 - start the application explicitly in main instead of on loading
+	- wrap all the refs into an object
+	- do a controlled start of the pollers after loading from file
 - optimize memory usage, keep only the last N events in memory (else would have to poll less often)
 - challenges: lorem ipsum: trim dot and comma
 - make parsing easier; separate operator and operands by newline?
