--- a/TODO.txt
+++ b/TODO.txt
@@ -22,11 +22,12 @@ OK - calculate the score automatically, in 1 minute ticks
 		OK - registering participants
 		OK - scheduling the starting of new rounds
 		OK - starting new rounds
-		!! - saving and loading application state
-		- scheduling the polling of participants
+		OK - saving and loading application state
+		!! - scheduling the polling of participants; on register
 		- polling participants
 		- replace controller with app
-	- do a controlled start of the pollers after loading from file
+	- do a controlled start of the pollers after loading from file; on start
+	- participant/id-sequence isn't persisted; get next ID from tournament
 - participant polling: sleep on error to avoid 100% CPU usage
 - optimize memory usage, keep only the last N events in memory (else would have to poll less often)
 - challenges: lorem ipsum: trim dot and comma
