New app: participant polling

--- a/TODO.txt
+++ b/TODO.txt
@@ -24,8 +24,8 @@ OK - calculate the score automatically, in 1 minute ticks
 		OK - starting new rounds
 		OK - saving and loading application state
 		OK - scheduling the polling of participants; on register
-		!! - polling participants
-		- replace controller with app
+		OK - polling participants
+		!! - replace controller with app
 	- load app state in main if state file exists
 	- do a controlled start of the pollers after loading from file; on start
 	- participant/id-sequence isn't persisted; get next ID from tournament
