--- a/TODO.txt
+++ b/TODO.txt
@@ -16,7 +16,7 @@ OK - poll servers automatically, many times per second, infinite loop
 OK - calculate the score automatically, in 1 minute ticks
 	OK - start a timer
 	OK - reload challenges in the beginning of a round
-!! - start the application explicitly in main instead of on loading
+OK - start the application explicitly in main instead of on loading
 	OK - replacement logic in app
 		OK - wrap all the refs into an object
 		OK - registering participants
@@ -29,7 +29,7 @@ OK - calculate the score automatically, in 1 minute ticks
 	OK - participant polling: sleep on error to avoid 100% CPU usage
 	OK - load app state in main if state file exists
 	OK - do a controlled start of the pollers after loading from file; on start
-	!! - participant/id-sequence isn't persisted; get next ID from tournament
+	OK - participant/id-sequence isn't persisted; get next ID from tournament
 - optimize memory usage, keep only the last N events in memory (else would have to poll less often)
 - challenges: lorem ipsum: trim dot and comma
 - make parsing easier; separate operator and operands by newline?
