Separate question elements by newline

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 OK - optimize memory usage, keep only the last N events in memory (else would have to poll less often)
-- make parsing easier; separate operator and operands by newline?
+OK - make parsing easier; separate operator and operands by newline?
 - better score calculation rules
 	- create round module to count the score incrementally (will be embedded in participant)
 	- take challenge points into consideration
