--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,8 @@
 	OK - take challenge points into consideration
 	OK - use the points of the highest hit below the lowest miss
 	OK - move rating/correct? to strike, rename app/record-response to record-strike
-	!! - count the score incrementally
+	OK - count the score incrementally
+	!! - check that connection errors are always the most serious failure
 	- slowly increasing score velocity
 - show score accumulation history
 	- save score for each tick as [timestamp score]
