--- a/TODO.txt
+++ b/TODO.txt
@@ -4,8 +4,11 @@
 	OK - use the points of the highest hit below the lowest miss
 	OK - move rating/correct? to strike, rename app/record-response to record-strike
 	OK - count the score incrementally
+	OK - show the significant strikes for recent rounds
 	!! - check that connection errors are always the most serious failure
 	- slowly increasing score velocity
+	- show velocity and max velocity for each round in detail page
+	- show velocity and max velocity for the latest round in overview page
 - show score accumulation history
 	- save score for each tick as [timestamp score]
 	- calculate total score from the history
