--- a/TODO.txt
+++ b/TODO.txt
@@ -6,14 +6,14 @@ OK - better score calculation rules
 	OK - count the score incrementally
 	OK - show the significant strikes for recent rounds
 	OK - check that connection errors are always the most serious failure
-- show score accumulation history
-	- save score for each tick as [timestamp score]
-	- calculate total score from the history
-	- print the history as text
+!! - show score accumulation history
+	OK - save score for each tick as [timestamp score]
+	!! - expose the history as JSON
 	- find and evaluate a JS graph library
 		http://www.flotcharts.org/
 		http://g.raphaeljs.com/
 	- visualize the history as graph
+	- calculate total score from the history
 - encourage high-availability more
 	- slowly increasing score velocity
 	- show velocity and max velocity for each round in detail page
