--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,7 @@ OK - better score calculation rules
 	OK - count the score incrementally
 	OK - show the significant strikes for recent rounds
 	OK - check that connection errors are always the most serious failure
-!! - show score accumulation history
+OK - show score accumulation history
 	OK - save score for each tick as [timestamp score]
 	OK - expose the history as JSON
 	OK - find and evaluate a JS graph library
@@ -16,7 +16,7 @@ OK - better score calculation rules
 		OK - inject the URL for the JSON in the overview template
 		OK - write some javascript which reads the JSON with Ajax
 		OK - input the data to the graph library (Flot)
-	!! - calculate total score from the history
+	OK - calculate total score from the history
 - encourage high-availability more
 	- slowly increasing score velocity
 	- show velocity and max velocity for each round in detail page
