--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
+OK - visualize the max velocity
+	OK - show velocity and max velocity for each round in detail page
+	OK - show velocity and max velocity for the latest round in overview page
+	OK - show max velocity in the score history graph
 !! - more challenges
 - balance the challenge points, perhaps 1 2 3 5 8 13 etc.
 - Solita branding
-- visualize the max velocity
-	OK - show velocity and max velocity for each round in detail page
-	OK - show velocity and max velocity for the latest round in overview page
-	- show max velocity in the score history graph
 - show most recent failure & pass in the overview page
