Instead of sending the challenge id in post body, use it as the request path

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 OK - Future.cancel() does not always stop the poller thread; create our own flag for stopping them
-- instead of sending the challenge id in post body, use it as the request path
+OK - instead of sending the challenge id in post body, use it as the request path
 - one of the participants (HKI 4.12.2012) used an obscure Python web server which killed the participant poller (bug with the http client?)
 	- reproduce the issue and fix the immediate problem
 	OK - make polling more failure resistant, perhaps restart the pollers periodically and recreate the http client
